--- a/app/modules/companies/templates/companies/base.html
+++ b/app/modules/companies/templates/companies/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}Elite Company Portal{% endblock %}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -145,6 +146,36 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='companies/js/company_sidebar_toggle.js') }}" defer></script>
+    <script>
+        const csrfMetaTag = document.querySelector('meta[name="csrf-token"]');
+        const csrfToken = csrfMetaTag?.getAttribute('content');
+
+        if (csrfToken) {
+            window.csrfToken = csrfToken;
+
+            if (window.axios) {
+                window.axios.defaults.headers.common['X-CSRFToken'] = csrfToken;
+            }
+
+            const originalFetch = window.fetch;
+            const toHeaders = (headers) => {
+                if (headers instanceof Headers) return headers;
+                return new Headers(headers || {});
+            };
+
+            window.fetch = (input, init = {}) => {
+                const config = { ...init };
+                const headers = toHeaders(init.headers);
+
+                if (!headers.has('X-CSRFToken')) {
+                    headers.set('X-CSRFToken', csrfToken);
+                }
+
+                config.headers = headers;
+                return originalFetch(input, config);
+            };
+        }
+    </script>
     {% block portal_scripts %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
 </body>
