--- a/app/modules/admin/templates/admin/settings.html
+++ b/app/modules/admin/templates/admin/settings.html
@@ -196,6 +196,7 @@
                 </div>
                 <div class="card-body">
                     <form method="post" action="{{ url_for('admin.save_admin_settings') }}" class="d-flex flex-column gap-4">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="row g-3">
                             <div class="col-12 col-xl-6">
                                 <div class="border rounded p-3 h-100">
@@ -416,6 +417,7 @@
                 </div>
                 <div class="card-body">
                     <form method="post" action="{{ url_for('admin.save_admin_settings') }}" class="d-flex flex-column gap-4">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="row g-3">
                             <div class="col-12 col-xl-6">
                                 <div class="border rounded p-3 h-100">
